# ohjelmistotekniikka

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
documentation/: arkkitehtuuri.md  kaytto_ohjeet.md  maarittelydokumentti.md  tuntikirjanpito.md
htmlcov/: index.html  src_tests_board_test_py.html  status.json
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: .coverage
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: index.py  kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: board.py  configs.py  db.py  engine.py  generate.py  input_box.py  main.py  move.py  pieces.py  pymongo_insert.py  rule_reader.py  rules.py  setting.py  test.py
src/tests/: board_test.py  move_test.py  pieces_test.py  rule_reader_test.py  rules_test.py  setting_test.py
src/ui/: board_ui.py  input_box.py
